# compressed_log

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: server.rs  simple.rs
src/: builder.rs  client.rs  compression.rs  format.rs  formatter.rs  lib.rs  logger.rs  lz4.rs  macros.rs
