[package]
name = "compressed_log"
version = "0.1.8"
authors = ["Michał Papierski <michal@papierski.net>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Log compression on the fly"
repository = "https://github.com/mpapierski/compressed_log"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "mpapierski/compressed_log", branch = "master" }

[dependencies]
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
failure = "0.1"
actix = "0.7"
actix-web = {version = "0.7", features = ["ssl"],  default-features = false}
futures = "0.1"
backoff = "0.1"
