[package]
name = "compressed_log"
version = "0.4.4"
authors = ["Michał Papierski <michal@papierski.net>, Justin Kilpatrick <justin@althea.net>"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Log compression on the fly"
repository = "https://github.com/mpapierski/compressed_log"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "mpapierski/compressed_log", branch = "master" }

[dependencies]
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
actix = "0.12"
awc = {version = "3.0.0-beta.18", default-features = false, features=["openssl", "compress-gzip", "compress-zstd"]}
futures = "0.3"
backoff = "0.4"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "1.4"

[features]
# prints debug messages as a feature
debug = []